# SentinelIQ

./: .dockerignore  .env  .env.docker  .env.example  .env.local  .env.staging  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aa.py  apply_migrations.sh  checklist.md  db.sqlite3  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  eventos_maio.csv  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.md  setup_task_generation.ps1  test_observable.py
.cursor/rules/: django.mdc
.github/workflows/: ci-cd.yml  develop.yml
accounts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
accounts/management/commands/: setup_accounts_periodic_tasks.py
accounts/migrations/: 0001_initial.py
alerts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
alerts/management/commands/: __init__.py  setup_alerts_periodic_tasks.py
alerts/migrations/: 0001_initial.py  0002_alert_mitre_subtechniques_alert_mitre_tactics_and_more.py  0002_alert_pap_alert_tlp.py  0002_alert_threat_category.py  0003_alertevent.py  0004_alert_tags_alter_alertevent_event_type.py  0005_alert_observables_alter_alertevent_event_type.py
cases/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
cases/management/commands/: setup_cases_periodic_tasks.py
cases/migrations/: 0001_initial.py  0002_case_mitre_subtechniques_case_mitre_tactics_and_more.py  0002_caseevent.py  0002_threatcategory_tasktemplate.py  0003_alter_caseevent_event_type.py  0003_case_pap_case_tlp.py  0004_alter_caseevent_event_type.py  0005_case_tags_alter_caseevent_event_type.py  0006_case_observables_alter_caseevent_event_type.py
config/: celery.py  settings.py  urls.py
core/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
core/management/commands/: create_task_templates.py  import_mitre_data.py  initialize_system.py  setup_core_periodic_tasks.py  validate_templates.py  verify_mitre_import.py
core/migrations/: 0001_initial.py  0002_alter_tag_color_alter_tag_name_observable.py  0002_rename_malicious_observable_is_malicious.py  0003_auto_20250521_1133.py  0004_mitretactic_mitretechnique_mitresubtechnique.py
docs/: ci-cd.md
media/case_attachments/: .viminfo  dev_1.pem
nginx/: default.conf  nginx.conf  nginx.staging.conf
notifications/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  system_signals.py  tasks.py  urls.py  views.py
notifications/management/commands/: cleanup_notification_events.py  setup_periodic_tasks.py  test_celery.py  test_notification.py
notifications/migrations/: 0001_initial.py
organizations/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
organizations/management/commands/: setup_organizations_periodic_tasks.py
organizations/migrations/: 0001_initial.py
scripts/: deploy.sh
sentineliq/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/css/: mitre_attack.css  style.css  styles.css
static/js/: main.js  misp_case_integration.js  mitre_attack_tooltips.js
staticfiles/css/: style.css
templates/: base.html  index.html  mitre_attack_base.html  pagination.html
templates/accounts/: dashboard_analyst.html  dashboard_org_admin.html  dashboard_superadmin.html  login.html  password_change.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
templates/accounts/emails/: account_deactivated.html  account_deactivated.txt  activity_report.html  activity_report.txt  (+2 more)
templates/alerts/: alert_confirm_delete.html  alert_detail.html  alert_escalate.html  alert_form.html  alert_list.html  custom_field_confirm_delete.html  custom_field_form.html  custom_field_list.html  related_alerts.html
templates/cases/: case_confirm_delete.html  case_detail.html  case_form.html  case_list.html  task_confirm_delete.html  task_form.html  task_template_bulk_create.html  task_template_clone.html  task_template_confirm_delete.html  task_template_form.html  task_template_list.html  task_template_toggle_status.html  threat_category_confirm_delete.html  threat_category_detail.html  threat_category_form.html  threat_category_list.html
templates/core/: add_alert_mitre_attack.html  add_alert_mitre_attack_group.html  add_alert_observable.html  add_case_mitre_attack.html  add_case_mitre_attack_group.html  add_case_observable.html  home.html  mitre_attack_group_confirm_delete.html  mitre_attack_group_detail.html  mitre_attack_group_form.html  mitre_attack_group_list.html  mitre_attack_list.html  observable_confirm_delete.html  observable_detail.html  observable_form.html  observable_list.html  tag_confirm_delete.html  tag_form.html  tag_list.html
templates/notifications/: base_notifications.html  dashboard.html  destination_confirm_delete.html  destination_detail.html  destination_form.html  destination_list.html  destination_test.html  log_detail.html  log_list.html  log_retry.html  rule_confirm_delete.html  rule_detail.html  rule_form.html  rule_list.html
templates/organizations/: organization_confirm_delete.html  organization_detail.html  organization_form.html  organization_list.html
templates/vision/: feed_list.html  misp_confirm_delete.html  misp_detail.html  misp_form.html  search.html  task_dashboard.html
vision/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
vision/migrations/: 0001_initial.py  0002_mispinstance_import_galaxies_and_more.py  0003_threatintelligenceitem_attribute_count_and_more.py
vision/services/: misp.py  misp_case_integration.py
vision/templatetags/: vision_extras.py
(+34 files in other folders)
