[project]
name = "sentineliq"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.13"

[tool.poetry]
name = "sentineliq"
version = "0.1.0"
description = "SentinelIQ - Aplicação Django moderna e escalável"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
gunicorn = "^23.0.0"
pytest-cov = "^6.1.1"
whitenoise = "^6.9.0"
celery = "^5.5.2"
django-celery-beat = "^2.8.0"
django-celery-results = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
commitizen = "^4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "*/settings/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sentineliq.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["core"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::django.utils.deprecation.RemovedInDjango61Warning"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

